<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/home"
            android:checked="true"
            android:icon="@drawable/home"
            android:title="@string/home" />

        <item
            android:id="@+id/favorite"
            android:checked="false"
            android:icon="@drawable/favorite"
            android:title="@string/favorite" />

        <item
            android:id="@+id/add_new_word"
            android:checked="false"
            android:icon="@drawable/plus"
            android:title="@string/add_new_word" />
        <item
            android:id="@+id/exit"
            android:checked="false"
            android:icon="@drawable/exit"
            android:title="@string/exit" />

    </group>
</menu>