<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <EditText
        android:id="@+id/from_word"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="10dp"
        android:hint="@string/from_word"/>

    <EditText
        android:id="@+id/to_word"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/to_meaning"
        android:paddingLeft="10dp" />

    <Button
        android:id="@+id/add_update"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add" />
</LinearLayout>